force-app/main/default/objects/sirenum__Site__c/fields/Purchase_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Required__c</fullName>
    <label>Purchase Order Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>