force-app/main/default/objects/sirenum__Site__c/fields/Reference_ID__c.field-meta.xml
<CustomField>
    <fullName>Reference_ID__c</fullName>
    <formula>HYPERLINK(
    &apos;/&apos; &amp; 	Sensitive_Data_Record__c,
    	Sensitive_Data_Record__r.Reference_ID__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference ID</label>
    <type>Text</type>
</CustomField>