force-app/main/default/objects/sirenum__Site__c/fields/Requires_Pre_approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Pre_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Pre-approval</label>
    <type>Checkbox</type>
</CustomField>