force-app/main/default/objects/sirenum__Site__c/fields/Sensitive_Data_Record__c.field-meta.xml
<CustomField>
    <fullName>Sensitive_Data_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sensitive Data Record</label>
    <referenceTo>Sensitive_Data__c</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>Sites</relationshipName>
    <type>Lookup</type>
</CustomField>