force-app/main/default/objects/sirenum__Site__c/recordTypes/Care_Package_Adult.recordType-meta.xml
<RecordType>
    <fullName>Care_Package_Adult</fullName>
    <active>true</active>
    <label>Adult</label>
</RecordType>