force-app/main/default/objects/sirenum__Site__c/recordTypes/Child_Young_Person.recordType-meta.xml
<RecordType>
    <fullName>Child_Young_Person</fullName>
    <active>true</active>
    <label>Child / Young Person</label>
</RecordType>